--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
-        android:label="facedetectionattandanceapp"
+        android:label="Face Recognation"
         android:name="${applicationName}"
        android:exported="true"
         android:icon="@mipmap/ic_launcher">
